--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
 </head>
 
 <body>
-  <h2 class="title">gsap.to() Basic Usage</h2>
-  <div class="box orange"></div>
-  <div class="box grey"></div>
-  <div class="box green"></div>
+  <div class="example1">
+    <h2>example1</h2>
+    <h2 class="title">gsap.to() Basic Usage</h2>
+    <div class="box orange"></div>
+    <div class="box green"></div>
+    <div class="box grey"></div>
+  </div>
+  <div class="example2">
+    <h2> example2</h2>
+    <div class="box orange2"></div>
+    <div class="box green2"></div>
+    <div class="box grey2"></div>
+  </div>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 <script src="scripts.js"></script>
+
 </html>
