--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+  <div class="stagger">
+    <h2>Stagger</h2>
+    <div class="stagger-box"></div>
+    <div class="stagger-box"></div>
+    <div class="stagger-box"></div>
+    <div class="stagger-box"></div>
+    <div class="stagger-box"></div>
+  </div>
+  <div class="bounce-ease">
+    <h2>Bounce ease</h2>
+    <div class="box ball"></div>
+  </div>
   <div class="example1">
     <h2>example1</h2>
     <h2 class="title">gsap.to() Basic Usage</h2>
