--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class="stagger">
     <h2>Stagger</h2>
-    <div class="stagger-box"></div>
-    <div class="stagger-box"></div>
-    <div class="stagger-box"></div>
-    <div class="stagger-box"></div>
-    <div class="stagger-box"></div>
+    <div class="stagger-box">Click</div>
+    <div class="stagger-box">Click</div>
+    <div class="stagger-box">Click</div>
+    <div class="stagger-box">Click</div>
+    <div class="stagger-box">Click</div>
   </div>
   <div class="bounce-ease">
     <h2>Bounce ease</h2>
