--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+  <div class="timeline">
+    <h2>timeline</h2>
+    <div id="timeline-yellow"></div>
+    <div id="timeline-green"></div>
+    <div id="timeline-red"></div>
+  </div>
   <div class="stagger">
     <h2>Stagger</h2>
     <div class="stagger-box">Click</div>
