--- a/following cursor/index.html
+++ b/following cursor/index.html
@@ -10,7 +10,11 @@
 
 <body>
   <div class="container">
-    <div class="box" id="box1"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
   </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
