testing text stagger animations

--- a/text animation/index.html
+++ b/text animation/index.html
@@ -3,6 +3,16 @@
 
 <body>
   <div class="container">
+    <h2 class="test">
+      <span>1</span>
+      <span>2</span>
+      <span>3</span>
+      <span>4</span>
+      <span>5</span>
+      <span>6</span>
+      <span>7</span>
+      <span>8</span>
+    </h2>
     <h1 class="title">
       <span>This is</span>
       <span>a long</span>
