--- a/text animation/index.html
+++ b/text animation/index.html
@@ -3,20 +3,28 @@
 
 <body>
   <div class="container">
-    <h2 class="test">
-      <span>1</span>
-      <span>2</span>
-      <span>3</span>
-      <span>4</span>
-      <span>5</span>
-      <span>6</span>
-      <span>7</span>
-      <span>8</span>
-    </h2>
     <h1 class="title">
-      <span>This is</span>
-      <span>a long</span>
-      <span>long title</span>
+      <div class="title-sec">
+        <span>a</span>
+        <span>b</span>
+        <span>c</span>
+        <span>d</span>
+        <span>e</span>
+      </div>
+      <div class="title-sec">
+        <span>f</span>
+        <span>g</span>
+        <span>i</span>
+        <span>j</span>
+        <span>k</span>
+      </div>
+      <div class="title-sec">
+        <span>l</span>
+        <span>m</span>
+        <span>n</span>
+        <span>o</span>
+        <span>p</span>
+      </div>
     </h1>
   </div>
 
