--- a/curve_text/index.html
+++ b/curve_text/index.html
@@ -14,7 +14,9 @@
     <h1 id="uptext">welcome to seesaw squad</h1>
   </div>
   <div class="logo-container">
-    <div id="logo"></div>
+    <div id="logo">
+      <button class="enter-btn" type="button">Get in</button>
+    </div>
   </div>
   <div class="bottom-container">
     <h1 id="bottomtext">go big or go home</h1>
